--- a/index.html
+++ b/index.html
@@ -1,35 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Murmur Chat</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat Secreto</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Tela de senha -->
-  <div id="password-screen" class="password-screen">
-    <div class="password-container">
-      <h2>Insira a senha para acessar o chat</h2>
-      <input type="password" id="password-input" placeholder="Senha">
-      <button id="password-btn">Entrar</button>
-      <p id="error-message" class="error-message"></p>
+    <div id="password-screen">
+        <input type="password" id="password-input" placeholder="Digite a senha">
+        <button id="password-btn">Entrar</button>
+        <div id="error-message"></div>
     </div>
-  </div>
 
-  <!-- Chat, visível apenas após a senha -->
-  <div id="chat-container" class="chat-container hidden">
-    <div class="chat-box" id="chat-box">
-      <!-- Mensagens irão aparecer aqui -->
+    <div id="chat-container" class="hidden">
+        <div id="chat-box"></div>
+        <input type="text" id="message-input" placeholder="Digite sua mensagem...">
+        <button id="send-btn">Enviar</button>
     </div>
-    <div class="input-container">
-      <input type="text" id="message-input" placeholder="Digite sua mensagem...">
-      <button id="send-btn">Enviar</button>
-    </div>
-  </div>
 
-  <script src="script.js"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
