--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
         <button id="rafa-btn">Entrar como Rafa</button>
     </div>
 
+    <!-- Tela de Registro -->
+    <div id="register-screen" class="hidden">
+        <h2>Registrar</h2>
+        <input type="email" id="register-email" placeholder="Digite seu email">
+        <input type="password" id="register-password" placeholder="Digite sua senha">
+        <button id="register-btn">Registrar</button>
+        <p id="register-error-message" class="error"></p>
+    </div>
+
+    <!-- Tela de Login -->
+    <div id="login-screen" class="hidden">
+        <h2>Login</h2>
+        <input type="email" id="login-email" placeholder="Digite seu email">
+        <input type="password" id="login-password" placeholder="Digite sua senha">
+        <button id="login-btn">Entrar</button>
+        <p id="login-error-message" class="error"></p>
+    </div>
+
     <!-- Tela de senha -->
     <div id="password-screen" class="hidden">
         <h2>Entre com a Senha</h2>
