--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- Tela de seleção de usuário -->
     <div id="user-selection-screen">
         <h2>Escolha seu Usuário</h2>
-        <button id="ph-btn">Entrar como PH</button>
-        <button id="rafa-btn">Entrar como Rafa</button>
+        <button id="JB-btn">Entrar como JB</button>
+        <button id="Sable-btn">Entrar como Sable</button>
     </div>
 
     <!-- Tela de Registro -->
